Fixing spacing and image issues

--- a/web/themes/custom/myusf/sass/src/partials/_boxes.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_boxes.scss
@@ -1308,6 +1308,9 @@ h2.carousel-overlay:before {
                     overflow: hidden;
                     &.no-news-image {
                         margin-left: 142px;
+                        @include media-breakpoint-down(phone) {
+                            margin-left: 95px
+                        }
                     }
                 }
             }
